<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/messenger"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/editText_name_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:layout_marginTop="32dp"
        android:paddingBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/phone_number_or_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="18sp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:background="@drawable/btn_background"
        android:enabled="false"
        android:textColor="@color/status_text_color"
        android:text="@string/sign_up" />

    <ProgressBar
        android:id="@+id/progressBar_sign_up"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone" />


</LinearLayout>